--- a/producer/src/main/resources/application.yaml
+++ b/producer/src/main/resources/application.yaml
@@ -7,11 +7,14 @@ spring:
 
   cloud:
     stream:
+      kafka:
+        binder:
+          brokers: 172.16.97.52:7092
       poller:
-        fixedDelay: 30
+        fixedDelay: 50
       bindings:
         moneySupplier-out-0:
-          destination: main-topic
+          destination: kafka-stream-topic
         streams:
           binder:
             deserializationExceptionHandler: sendToDlq
